# rustmouth

./: .gitignore  .gitmodules  Cargo.toml  README.md
praat-sys/: Cargo.toml  README.md  build.rs  wrapper.hpp
praat-sys/praat-src/LPC/: Sound_and_WarpedLPC.h
praat-sys/praat-src/sys/: Gui.h
praat-sys/src/: empty.cpp  lib.rs  math_stubs.c  rustmouth_config.h  stubs.cpp
rustmouth/: Cargo.toml  README.md
rustmouth/src/: lib.rs  main.rs
