[package]
name = "praat-sys"
version = "0.0.1"
edition = "2024"
build = "build.rs"
description = "Low-level Rust bindings for the Praat."
license = "GPL-3.0-or-later"
repository = "https://github.com/mosaic-rs/RUSTMOUTH"                
readme = "README.md"                                                 
keywords = ["linguistics", "phonetics", "praat", "audio"]            
categories = ["science", "multimedia::audio"] 

exclude = [
    "*.wav",          
    "*.pdf",          
    "manual/",        
    "test/",         
    "*.png",          
    "*.o",            
    "target/",        
]

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
