[package]
name = "praat-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
description = "Low-level Rust bindings for the Praat"
license = "GPL-3.0-or-later"
repository = "https://github.com/mosaic-rs/RUSTMOUTH"
readme = "../README.md"
keywords = ["linguistics", "phonetics", "praat", "audio"]
categories = ["science", "multimedia::audio"]

include = [
    "src/**/*",
    "build.rs",
    "wrapper.hpp",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    
    "praat-src/**/*.h",
    "praat-src/**/*.hpp",
    "praat-src/**/*.c", 
    
    "praat-src/melder/**/*.cpp",
    "praat-src/num/**/*.cpp",
    "praat-src/stat/**/*.cpp",
    "praat-src/sys/**/*.cpp",
    "praat-src/fon/**/*.cpp",
    "praat-src/LPC/**/*.cpp",
    "praat-src/dwtools/**/*.cpp",
    "praat-src/kar/**/*.cpp",
    "praat-src/external/gsl/**/*.cpp",
    "praat-src/external/clapack/**/*.cpp",
    "praat-src/external/gsl/**/*.c",
    "praat-src/external/clapack/**/*.c",
]
[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.69"