[package]
name = "rustmouth"
version = "0.0.1"
edition = "2021"
description = "Rust API for praat"
license = "GPL-3.0-or-later"
repository = "https://github.com/mosaic-rs/RUSTMOUTH"
readme = "../README.md"
keywords = ["linguistics", "phonetics", "praat", "audio"]
categories = ["science", "multimedia::audio"]

[dependencies]
praat-sys = { path = "../praat-sys" }

[[bin]]
name = "praat_test"
path = "src/main.rs"