[package]
name = "rustmouth"
version = "0.0.3"
edition = "2021"
description = "Rust API for praat"
license = "GPL-3.0-or-later"
repository = "https://github.com/mosaic-rs/RUSTMOUTH"
readme = "../README.md"
keywords = ["linguistics", "phonetics", "praat", "audio"]
categories = ["science", "multimedia::audio"]

[dependencies]
praat-sys = { version = "0.1.0", path = "../praat-sys" }

[[bin]]
name = "praat_test"
path = "src/main.rs"